# project

./: CMakeLists.txt  LICENSE
cmake/: compiler_definitions.cmake  compiler_options.cmake  options.cmake  print_info.cmake
src/: CMakeLists.txt  main.cpp
src/big_int/: CMakeLists.txt
src/big_int/include/big_int/: big_int.hpp
src/big_int/src/: big_int.cpp
src/hello/: CMakeLists.txt
src/hello/include/hello/: a.h  hello.h
src/hello/src/: a.cpp  hello.c
src/world/: CMakeLists.txt
src/world/include/world/: b.h
src/world/src/: b.cpp
